objects/How_To__kav.object
<CustomObject><fields>
        <fullName>Attachment_1__c</fullName>
        <label>Attachment 1</label>
        <type>File</type>
    </fields><fields>
        <fullName>Attachment_2__c</fullName>
        <label>Attachment 2</label>
        <type>File</type>
    </fields><fields>
        <fullName>Attachment_3__c</fullName>
        <label>Attachment 3</label>
        <type>File</type>
    </fields><fields>
        <fullName>Chat_Answer__c</fullName>
        <label>Chat Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>Html</type>
    </fields><articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><label>How To</label><pluralLabel>How To</pluralLabel></CustomObject>